--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "jsonwebtoken": "^5.4.1",
+    "mongoose": "^4.2.7",
     "morgan": "^1.6.1",
-    "network-address": "^1.0.0"
+    "network-address": "^1.0.0",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.2.0",
