--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cookie-parser": "^1.4.0",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "express-graphql": "^0.4.4",
+    "graphql": "^0.4.13",
     "jsonwebtoken": "^5.4.1",
     "mongoose": "^4.2.7",
     "morgan": "^1.6.1",
