--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "devDependencies": {
     "babel-cli": "^6.2.0",
     "babel-core": "^6.2.1",
+    "babel-polyfill": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-1": "^6.1.18",
+    "babel-runtime": "^5.8.34",
     "nodemon": "^1.8.1"
   },
   "scripts": {
