--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.3",
     "express-graphql": "^0.4.4",
     "graphql": "^0.4.13",
+    "is-express-schema-valid": "^0.1.7",
     "jsonwebtoken": "^5.4.1",
     "lodash": "^3.10.1",
     "mongoose": "^4.2.7",
