--- a/package.json
+++ b/package.json
@@ -21,22 +21,29 @@
     "mongoose": "^4.2.7",
     "morgan": "^1.6.1",
     "network-address": "^1.0.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "superagent": "^1.5.0",
+    "validator": "^4.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.2.0",
-    "babel-core": "^6.2.1",
+    "babel-cli": "^6.3.15",
+    "babel-core": "^6.3.15",
     "babel-polyfill": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-stage-1": "^6.1.18",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^5.8.34",
-    "nodemon": "^1.8.1"
+    "chai": "^3.4.1",
+    "chai-string": "^1.1.4",
+    "chai-subset": "^1.2.0",
+    "mocha": "^2.3.4",
+    "nodemon": "^1.8.1",
+    "sinon": "^1.17.2"
   },
   "scripts": {
     "nodemon": "nodemon -w ./src bin/runServer -e js,jsx,json",
     "start": "node bin/runServer",
     "start-dev": "npm run nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test node bin/runMocha"
   },
   "repository": {
     "type": "git",
