--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "babel-cli": "^6.3.15",
     "babel-core": "^6.3.15",
+    "babel-plugin-transform-regenerator": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.3.13",
     "babel-polyfill": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
