--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "is-express-schema-valid": "^0.1.7",
     "jsonwebtoken": "^5.4.1",
     "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "mongoose": "^4.2.9",
     "morgan": "^1.6.1",
     "network-address": "^1.0.0",
@@ -28,9 +29,10 @@
   "devDependencies": {
     "babel-cli": "^6.3.15",
     "babel-core": "^6.3.15",
+    "babel-plugin-syntax-async-functions": "^6.3.13",
     "babel-plugin-transform-regenerator": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-polyfill": "^6.2.0",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^5.8.34",
