--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@risingstack/graffiti": "^2.0.0",
     "@risingstack/graffiti-mongoose": "^4.3.0",
+    "babel": "^5.8.34",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "busboy": "^0.2.12",
@@ -27,15 +28,6 @@
     "validator": "^4.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.15",
-    "babel-core": "^6.3.15",
-    "babel-plugin-syntax-async-functions": "^6.3.13",
-    "babel-plugin-transform-regenerator": "^6.3.13",
-    "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-runtime": "^5.8.34",
     "chai": "^3.4.1",
     "chai-string": "^1.1.4",
     "chai-subset": "^1.2.0",
